# supertux

./: .clang-tidy  .cvsignore  .editorconfig  .gitattributes  .gitignore  .gitmodules  .mention-bot  .travis.yml  AUTHORS  AUTHORS.txt  CHANGES.txt  CMakeCache.txt  CMakeLists.txt  CMakeLists.txt.old  CMakePresets.json  CMakeSettings.json  CMakeUserPresets.json  CODINGSTYLE  CODINGSTYLE.md  CONTRIBUTING.md  CPackConfig.cmake  CPackSourceConfig.cmake  ChangeLog  Doxyfile  Doxyfile.in  FIXME  ForestExit.stl  INSTALL  INSTALL.md  INSTALL.txt  I_Spy_Eye.stl  Jamfile  Jamrules  LEVELDESIGN  Makefile  Makefile.am  Makefile.cvs  Makefile.in  NEWS  NEWS.md  (+66 more)
data/: .gitignore  ACKNOWLEDGEMENTS.txt  AUTHORS  CREDITS  Jamfile  Makefile.am  README  SConscript  camera.cfg  characters.stlst  credits.stxt  credits.txt  cs.po  extro-bonus.txt  extro-bonus2.txt  extro.txt  intro.txt  supertux.desktop  supertux.strf  worldmap.stwm
data/demos/: test.pingus-demo
data/fonts/: Deva-voy-white-big.stf  Deva-voy-white.stf  Deva-white-big.stf  MapoBackpacking_License.txt  NanumBarunGothic_License.txt  README  andale10.stf  andale12.stf  ara-white-big.stf  ara-white-small.stf  ara-white.stf  blue.stf  console2.stf  cyr-white-big.stf  cyr-white-small.stf  cyr-white.stf  gold.stf  gray.stf  greek-white-big.stf  greek-white-small.stf  greek-white.stf  he-white.stf  ko-white-big.stf  ko-white-small.stf  ko-white.stf  white-big.stf  white-small.stf  white.stf  zh-white-big.stf  zh-white-small.stf  zh-white.stf
data/images/: autotiles.satc  autotiles_ice_world.satc  convert.txt  ice_world.strf  icon.xpm  icy_world.strf  sprites.strf  supertux.strf  tiles.strf  worldmap.strf
data/levels/: crumbel_cavern.stl  level1.dat-old  level25.stl  level26.stl  levels  preload_worldselect.nut  tip_of_iceberg.stl
data/locale/: .cvsignore  af_ZA.po  ar.po  az.po  be.po  bg.po  br.po  bs.po  ca.po  cmn.po  credits.pot  cs.po  da.po  de.po  el.po  eo.mo  eo.po  es.po  es_AR.po  et.po  eu.po  fi.po  fr.po  fr_CA.po  gd.po  gl.po  he.po  hi_IN.po  hr.po  hu.po  hy.po  id.po  is.po  it.po  ja.po  jbo.po  jv.po  km.po  ko.po  la.po  (+26 more)
data/music/: Mortimers_chipdisko-fast.mod  Mortimers_chipdisko.mod  SALCON-fast.MOD  SALCON.MOD  airship_remix.music  bossattack-fast.mod  bossattack.mod  bossattack.music  bright_thunders.music  cave-fast.mod  cave.mod  cave.music  factory-fast.mod  factory.mod  forest-fast.mod  forest.mod  forest.music  forest2-fast.mod  forest2.mod  forest_theme.music  fortress-fast.mod  fortress.mod  fortress.music  fortress2-fast.mod  fortress2.mod  ghostforest-fast.mod  ghostforest.music  ghostforest2-fast.mod  ghostforest2.mod  greatgigantic.music  invincible.music  ji_turn.it  leveldone.mod  leveldone.music  loser.xm  scary-fast.mod  scary.mod  theme.mod  treeboss.music  tux-leveldone.mod  (+3 more)
data/particles/: blizzard.stcp  bubbles_2.stcp  default.stcp  drops.stcp  drops_slow.stcp  hailstorm.stcp  ice_ground_burst.stcp  splashes.stcp  waterfall_bubbles.stcp  waterfall_bubbles_2.stcp  waterfog.stcp
data/script/: default.nut
data/scripts/: console.nut  default.nut  reference.stsr
data/shader/: shader.frag  shader.vert  shader100.frag  shader100.vert  shader330.frag  shader330.vert
data/sounds/: convert_to_mono.sh  normalize.sh
lib/: .cvsignore  Jamfile  Makefile.am  SConscript
lib/app/: gettext.h  globals.cpp  globals.h  setup.cpp  setup.h  tinygettext.cpp  tinygettext.h
lib/audio/: musicref.cpp  musicref.h  sound.cpp  sound.h  sound_manager.cpp  sound_manager.h
lib/gui/: button.cpp  button.h  menu.cpp  menu.h  mousecursor.cpp  mousecursor.h
lib/lisp/: lexer.cpp  list_iterator.cpp  list_iterator.h  parser.cpp  parser.h  writer.cpp  writer.h
lib/math/: aatriangle.h  physic.cpp  physic.h  rectangle.h  vector.cpp  vector.h
lib/special/: base.h  collision.cpp  collision.h  collision_hit.h  frame_rate.cpp  frame_rate.h  game_object.cpp  game_object.h  moving_object.cpp  moving_object.h  object_remove_listener.h  sprite.cpp  sprite.h  sprite_data.cpp  sprite_data.h  sprite_manager.cpp  sprite_manager.h  stringlist.cpp  stringlist.h  timer.cpp  timer.h
lib/utils/: .cvsignore  configfile.cpp  configfile.h  exceptions.h  lispreader.cpp  lispreader.h  lispwriter.cpp  lispwriter.h
lib/video/: drawing_context.cpp  drawing_context.h  font.cpp  font.h  screen.cpp  screen.h  surface.cpp  surface.h
src/: .clang-format  .cvsignore  Jamfile  Makefile.am  Makefile.in  SConscript  addon.cpp  addon.hpp  addon_manager.cpp  addon_manager.hpp  background.cpp  background.h  badguy.c  badguy.cpp  badguy.h  badguy_specs.cpp  badguy_specs.h  bitmask.c  bitmask.cpp  bitmask.h  button.c  button.cpp  button.h  camera.cpp  camera.h  collision.c  collision.cpp  collision.h  collision.hpp  collision_grid.cpp  collision_grid.h  collision_grid.hpp  collision_grid_iterator.h  collision_grid_iterator.hpp  collision_hit.h  collision_hit.hpp  colorscheme.cpp  configfile.cpp  configfile.h  console.cpp  (+207 more)
src/SDL2/: Android.mk  IMG_jpg.c  IMG_lbm.c  IMG_xcf.c  SDL2_image.spec  SDL_config.h  configure
src/addon/: addon.cpp  addon.hpp  addon_component_manager.hpp  addon_dependency_manager.cpp  addon_dependency_manager.hpp  addon_list.cpp  addon_list.hpp  addon_manager.cpp  addon_manager.hpp  addon_screenshot_manager.cpp  addon_screenshot_manager.hpp  downloader.cpp  downloader.hpp  downloader_defines.hpp  md5.cpp  md5.hpp
src/api/: external_sdk.cpp  external_sdk.hpp
src/audio/: dummy_sound_source.cpp  dummy_sound_source.hpp  fwd.hpp  managed_sound_source.cpp  managed_sound_source.hpp  musicref.cpp  musicref.h  ogg_sound_file.cpp  ogg_sound_file.hpp  openal_sound_source.cpp  openal_sound_source.hpp  semantic.cache  sound_error.cpp  sound_error.hpp  sound_file.cpp  sound_file.hpp  sound_manager.cpp  sound_manager.h  sound_manager.hpp  sound_source.cpp  sound_source.h  sound_source.hpp  stream_sound_source.cpp  stream_sound_source.h  stream_sound_source.hpp  wav_sound_file.cpp  wav_sound_file.hpp
src/badguy/: angrystone.cpp  angrystone.hpp  badguy.cpp  badguy.h  badguy.hpp  badguy_no_script.cpp  badguy_no_script.hpp  bomb.h  (+192 more)
(+4915 files in other folders)
